feat: docs: readme

--- a/project.config.json
+++ b/project.config.json
@@ -22,14 +22,19 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.3",
-	"appid": "wx583597b92279a5fe",
-	"projectname": "fangxiaoer",
+	"appid": "wx4a2f66d67528c776",
+	"projectname": "mini-template",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
 	"isGameTourist": false,
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"scripts": {
+		"beforeCompile": "",
+		"beforePreview": "",
+		"beforeUpload": ""
+	},
 	"condition": {
 		"search": {
 			"current": -1,
