--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "房小二",
+    "navigationBarTitleText": "mini-template",
     "navigationBarTextStyle": "black",
     "navigationStyle": "custom"
   },
