--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "miniprogram-request": "^5.1.8"
+    "@vant/weapp": "^1.4.4",
+    "miniprogram-request": "^5.1.10"
   }
 }
