--- a/project.config.json
+++ b/project.config.json
@@ -15,7 +15,7 @@
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
 		"babelSetting": {
-			"ignore": [],
+			"ignore": ["miniprogram_npm"],
 			"disablePlugins": [],
 			"outputPath": ""
 		}
